Functional ListView added to GUI and connected to the bd (but only showing id's)

--- a/SID_32/src/application/views/FXMLMain.fxml
+++ b/SID_32/src/application/views/FXMLMain.fxml
@@ -38,7 +38,10 @@
 										<Cursor fx:constant="HAND" />
 									</cursor>
 								</Button>
-                        <ListView prefHeight="200.0" prefWidth="200.0" />
+                        <ListView id="cultura_listview" fx:id="cultura_listview" prefHeight="200.0" prefWidth="200.0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></ListView>
 							</children>
 							<padding>
 								<Insets top="10.0" />
