--- a/SID_32/src/application/styles/FXMLMain.css
+++ b/SID_32/src/application/styles/FXMLMain.css
@@ -9,11 +9,18 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
 }
 
-.list-view .list-cell:even {
-	-fx-background-color: blue;
-	-fx-text-fill: black;
+#cultura_listview {
+	-fx-background-color: transparent;
 }
-.list-view .list-cell:odd {
-	-fx-background-color: blue;
-	-fx-text-fill: black;
+
+#cultura_listview .list-cell {
+	-fx-background-color: transparent;
+	-fx-text-fill: white;
+}
+
+#cultura_listview .list-cell:selected {
+	-fx-background-color: #2f2f2f;
+	-fx-effect: dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
+	-fx-text-fill: white;
+	-fx-margin: 10.0;
 }
