--- a/SID_32/src/application/styles/FXMLShell.css
+++ b/SID_32/src/application/styles/FXMLShell.css
@@ -1,12 +1,12 @@
 #shell {
 	-fx-background-color: transparent;
-	-fx-margin: 20;
-	-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 8, 0, 0, 0);
+	-fx-margin: 20.0;
+	-fx-effect: dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 8.0, 0.0, 0.0, 0.0);
 }
 
 #shell_maximized {
 	-fx-background-color: #000000;
-	-fx-margin: 0;
+	-fx-margin: 0.0;
 }
 
 #root {
@@ -14,7 +14,7 @@
 }
 
 #top {
-	-fx-background-color: linear-gradient(to right, #11998e 40%, #38ef7d 100%);
+	-fx-background-color: linear-gradient(to right, #11998e 40.0%, #38ef7d 100.0%);
 }
 
 #close_btn {
@@ -57,4 +57,92 @@
 #minimize_btn:hover {
     -fx-background-color: #ffffff;
     -fx-graphic: url("/application/media/icons/minimize_black_20px.png");
+}
+
+
+
+.scroll-bar{
+ -fx-background-color: transparent;
+ -fx-background-radius: 2.0em;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track {
+ -fx-background-color: transparent;
+ -fx-border-color:transparent;
+ -fx-background-radius: 2.0em;
+}
+
+.scroll-bar:vertical .track-background,
+.scroll-bar:horizontal .track-background {
+ -fx-background-color: transparent;
+ -fx-background-insets: 0.0;
+ -fx-background-radius: 2.0em;
+}
+
+.scroll-bar:horizontal .thumb {
+ -fx-background-color: rgb(211.0,211.0,211.0);
+ -fx-background-insets: 4.0 0.0 4.0 0.0;
+ -fx-background-radius: 2.0em;
+}
+
+.scroll-bar:vertical .thumb {
+ -fx-background-color: rgb(211.0,211.0,211.0);
+ -fx-background-insets: 0.0 4.0 0.0 4.0;
+ -fx-background-radius: 2.0em;
+}
+
+.scroll-bar:horizontal .thumb:hover,
+.scroll-bar:vertical .thumb:hover {
+ -fx-background-color: rgb(231.0,231.0,231.0);
+}
+
+.scroll-bar:horizontal .thumb:pressed,
+.scroll-bar:vertical .thumb:pressed {
+ -fx-background-color: rgb(255.0,255.0,255.0);
+}
+
+.scroll-bar:vertical .increment-button, .scroll-bar:vertical .decrement-button {
+ -fx-background-color:transparent;
+ -fx-background-radius: 2.0em;
+ -fx-padding: 5.0;
+}
+
+.scroll-bar:horizontal .increment-button, .scroll-bar:horizontal .decrement-button {
+ -fx-background-color:transparent;
+ -fx-background-radius: 2.0em;
+ -fx-padding: 5.0;
+}
+
+.scroll-bar:horizontal .increment-arrow {
+ -fx-shape: "M 0 0 L 4 8 L 8 0 Z";
+ -fx-background-color: rgb(211.0,211.0,211.0);
+ -fx-padding: 0.25em;
+ -fx-rotate: -90.0;
+}
+
+.scroll-bar:vertical .increment-arrow {
+ -fx-background-color: rgb(211.0,211.0,211.0);
+ -fx-shape: "M 0 0 L 4 8 L 8 0 Z";
+ -fx-padding: 0.25em;
+ -fx-rotate: 0.0;
+}
+
+.scroll-bar:horizontal .decrement-arrow {
+ -fx-background-color: rgb(211.0,211.0,211.0);
+ -fx-shape: "M 0 0 L 4 8 L 8 0 Z";
+ -fx-padding: 0.25em;
+ -fx-rotate: 90.0;
+}
+
+.scroll-bar:vertical .decrement-arrow {
+ -fx-background-color: rgb(211.0,211.0,211.0);
+ -fx-shape: "M 0 0 L 4 8 L 8 0 Z";
+ -fx-padding: 0.25em;
+ -fx-rotate: -180.0;
+}
+
+.scroll-bar:vertical:focused,
+.scroll-bar:horizontal:focused {
+ -fx-background-color: transparent,rgb(96.0,96.0,96.0),rgb(96.0,96.0,96.0);
 }
