--- a/SID_32/src/application/styles/FXMLMain.css
+++ b/SID_32/src/application/styles/FXMLMain.css
@@ -2,6 +2,10 @@
 	-fx-background-color: #252525;
 }
 
+#profile_image_btn {
+	-fx-background-color: transparent;
+}
+
 #add_cultura_btn {
 	-fx-background-color: linear-gradient(to right, #11998e 40.0%, #38ef7d 100.0%);
 	-fx-background-radius: 60.0;
