--- a/SID_32/src/application/styles/FXMLShell.css
+++ b/SID_32/src/application/styles/FXMLShell.css
@@ -144,5 +144,57 @@
 
 .scroll-bar:vertical:focused,
 .scroll-bar:horizontal:focused {
- -fx-background-color: transparent,rgb(96.0,96.0,96.0),rgb(96.0,96.0,96.0);
+ -fx-background-color: transparent, #606060, #606060;
+}
+
+.table-view{
+   -fx-background-color: transparent;
+}
+
+.table-view:focused{
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header-background{
+    -fx-background-color: #ffffff;
+}
+
+.table-view .column-header-background .label{
+    -fx-background-color: transparent;
+    -fx-text-fill: #000000;
+}
+
+.table-view .column-header {
+    -fx-background-color: transparent;
+}
+
+.table-view .table-cell{
+    -fx-text-fill: #000000;
+}
+
+.table-view .table-cell:selected{
+    -fx-text-fill: #ffffff;
+}
+
+.table-row-cell{
+    -fx-background-color: -fx-table-cell-border-color, #ffffff;
+    -fx-background-insets: 0.0, 0.0 0.0 1.0 0.0;
+    -fx-padding: 0.0em; /* 0 */
+}
+
+.table-view .filler {
+	-fx-background-color: #ffffff
+}
+
+.table-row-cell:odd{
+    -fx-background-color: -fx-table-cell-border-color, #ffffff;
+    -fx-background-insets: 0.0, 0.0 0.0 1.0 0.0;
+    -fx-padding: 0.0em; /* 0 */  
+}
+
+.table-row-cell:selected {
+    -fx-background-color: linear-gradient(to right, #11998e 40.0%, #38ef7d 100.0%);
+    -fx-effect: dropshadow(three-pass-box, rgba(140.0,140.0,140.0,0.6), 8.0, 0.0, 0.0, 0.0);
+    -fx-background-radius: 60.0;
+    -fx-background-insets: 0.0;
 }
