--- a/SID_32/src/application/styles/FXMLMain.css
+++ b/SID_32/src/application/styles/FXMLMain.css
@@ -50,16 +50,36 @@
 	-fx-graphic: url("/application/media/icons/variablepH_pink_32px.png");
 }
 
+#pH_stroke_color, .default-color0.chart-line-symbol, .default-color1.chart-line-symbol, .default-color2.chart-line-symbol, .default-color3.chart-line-symbol {
+	-fx-stroke: #ff2d55;
+	-fx-background-color: #ff2d55, #ffffff;
+}
+
 #CO2 {
 	-fx-graphic: url("/application/media/icons/variableCO2_orange_32px.png");
+}
+
+#CO2_stroke_color, .default-color1.chart-line-symbol, .default-color2.chart-line-symbol, .default-color3.chart-line-symbol{
+	-fx-stroke: #5856d6;
+	-fx-background-color: #5856d6, #ffffff;
 }
 
 #H2O {
 	-fx-graphic: url("/application/media/icons/variableH2O_blue_32px.png");
 }
 
+#H2O_stroke_color, .default-color2.chart-line-symbol, .default-color3.chart-line-symbol {
+	-fx-stroke: #007aff;
+	-fx-background-color: #007aff, #ffffff;
+}
+
 #O2 {
 	-fx-graphic: url("/application/media/icons/variableO2_lightblue_32px.png");
+}
+
+#O2_stroke_color, .default-color3.chart-line-symbol {
+	-fx-stroke: #5ac8fa;
+	-fx-background-color: #5ac8fa, #ffffff;
 }
 
 /* <VARIABLES/> */
