--- a/SID_32/src/application/views/FXMLMain.fxml
+++ b/SID_32/src/application/views/FXMLMain.fxml
@@ -29,12 +29,12 @@
 										</ImageView>
 									</graphic>
 								</Button>
-								<Label text="Investigador" textFill="WHITE" />
+								<Label text="Investigator" textFill="WHITE" />
 							</children>
 						</VBox>
 						<VBox alignment="TOP_CENTER" layoutX="67.0" layoutY="231.0" prefHeight="249.0" prefWidth="188.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="180.0">
 							<children>
-								<Button id="add_cultura_btn" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" text="Cultura" textFill="WHITE">
+								<Button id="add_cultura_btn" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" text="Culture" textFill="WHITE">
 									<graphic>
 										<ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
 											<image>
@@ -62,16 +62,16 @@
 			<center>
 				<ScrollPane id="center_scrollpane" prefViewportHeight="1028.0" prefViewportWidth="600.0">
 					<content>
-						<AnchorPane id="center" pickOnBounds="false" prefHeight="480.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+						<AnchorPane id="center" pickOnBounds="false" prefHeight="1065.0" prefWidth="631.0" BorderPane.alignment="CENTER">
 							<children>
 								<VBox layoutX="40.0" layoutY="30.0" spacing="20.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="30.0">
 									<children>
 										<Label id="cultura_name_label" fx:id="cultura_name_label" layoutX="31.0" layoutY="27.0" text="cultura_name_label" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="30.0">
 											<font>
-												<Font name="System Bold" size="18.0" />
+												<Font name="System Bold" size="24.0" />
 											</font>
 										</Label>
-										<Label layoutX="30.0" layoutY="73.0" text="Analytics Overview" AnchorPane.leftAnchor="40.0">
+										<Label layoutX="30.0" layoutY="73.0" text="Sensor Analytics Overview" AnchorPane.leftAnchor="40.0">
 											<font>
 												<Font name="System Bold" size="18.0" />
 											</font>
@@ -98,6 +98,13 @@
 															<font>
 																<Font name="System Bold" size="18.0" />
 															</font>
+															<graphic>
+																<ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+																	<image>
+																		<Image url="@../media/icons/doubleup_black_20px.png" />
+																	</image>
+																</ImageView>
+															</graphic>
 														</Label>
 													</center>
 													<HBox.margin>
@@ -120,6 +127,13 @@
 															<font>
 																<Font name="System Bold" size="18.0" />
 															</font>
+															<graphic>
+																<ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+																	<image>
+																		<Image url="@../media/icons/doubledown_black_20px.png" />
+																	</image>
+																</ImageView>
+															</graphic>
 														</Label>
 													</center>
 													<padding>
@@ -135,13 +149,36 @@
 												</BorderPane>
 											</children>
 										</HBox>
-										<Label layoutX="10.0" layoutY="47.0" text="Monitored Variables">
-											<font>
-												<Font name="System Bold" size="18.0" />
-											</font>
-										</Label>
-										<HBox id="monitorized_variables_hbox" fx:id="monitorized_variables_hbox" alignment="CENTER_LEFT" spacing="20.0" />
-										<Label layoutX="10.0" layoutY="274.0" text="Chart">
+										<VBox>
+											<children>
+												<HBox spacing="2.0">
+													<children>
+														<Label layoutX="10.0" layoutY="47.0" text="Monitored Variables">
+															<font>
+																<Font name="System Bold" size="18.0" />
+															</font>
+														</Label>
+														<Button id="add_simple_btn" alignment="CENTER_RIGHT" layoutX="185.0" layoutY="10.0" mnemonicParsing="false" onAction="#addVariableToMonitorize" textFill="WHITE">
+															<cursor>
+																<Cursor fx:constant="HAND" />
+															</cursor>
+															<graphic>
+																<ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+																	<cursor>
+																		<Cursor fx:constant="HAND" />
+																	</cursor>
+																	<image>
+																		<Image url="@../media/icons/add_black_20px.png" />
+																	</image>
+																</ImageView>
+															</graphic>
+														</Button>
+													</children>
+												</HBox>
+												<HBox id="monitorized_variables_hbox" fx:id="monitorized_variables_hbox" alignment="CENTER_LEFT" spacing="20.0" />
+											</children>
+										</VBox>
+										<Label layoutX="10.0" layoutY="274.0" text="Measurements Chart">
 											<font>
 												<Font name="System Bold" size="18.0" />
 											</font>
@@ -154,6 +191,30 @@
 												<NumberAxis side="LEFT" />
 											</yAxis>
 										</LineChart>
+										<HBox spacing="2.0">
+											<children>
+												<Label layoutX="10.0" layoutY="342.0" text="Measurements">
+													<font>
+														<Font name="System Bold" size="18.0" />
+													</font>
+												</Label>
+												<Button id="add_simple_btn" alignment="CENTER_RIGHT" mnemonicParsing="false" textFill="WHITE">
+													<cursor>
+														<Cursor fx:constant="HAND" />
+													</cursor>
+													<graphic>
+														<ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+															<image>
+																<Image url="@../media/icons/add_black_20px.png" />
+															</image>
+															<cursor>
+																<Cursor fx:constant="HAND" />
+															</cursor>
+														</ImageView>
+													</graphic>
+												</Button>
+											</children>
+										</HBox>
 										<TableView fx:id="table_view" prefHeight="200.0" prefWidth="200.0" />
 									</children>
 								</VBox>
